# interview-ai-engineer

./: README.md
fda-regulations/: Dockerfile  README.md  docker-compose.yml  generate_stats.py  main.py  pyproject.toml  rag_warning_letters.py  scrape_warning_letters.py
fda-regulations/fda_faiss_index/: index.faiss  index.pkl
fda-regulations/fda_warning_letters/: metadata.csv
fda-regulations/fda_warning_letters/full_text/: 00000_snushaven_com_02_27_2026.txt  00001_thesnuslife_com_02_27_2026.txt  00002_idripejuice_com_02_27_2026.txt  00003_Exactech__Inc__dba_Advita_Ortho_12_19_2025.txt  00004_Simtra_BioPharma_Solutions_03_03_2026.txt  00005_Tentamus_India_Private_Limited_03_03_2026.txt  00006_Fareva_Morton_Grove_03_03_2026.txt  00007_Raw_Bistro_Inc__02_17_2026.txt  00008_NSE_Products__Inc__DBA_Nu_Skin_Enterprises__Inc__03_02_2026.txt  00009_SSS_AUSTAR_LLC_03_05_2026.txt  00010_El_Rey_USA_Meats___Seafood_Inc__02_19_2026.txt  00011_Rio_Verde_Food_Service_Inc__02_27_2026.txt  00012_Novo_Nordisk_Inc__03_05_2026.txt  00013_Premium_Health_Management_Inc__dba_Premium_Health_02_20_2026.txt  00014_Kare_Solutions__LLC_dba_Zappy_02_20_2026.txt  00015_Strut_Health__LLC_dba_Strut_02_20_2026.txt  00016_Peaks_Curative__LLC_dba_Peaks_02_20_2026.txt  00017_Lean_Rx__Inc__dba_SkinnyRx_02_20_2026.txt  00018_Good_Girl_LLC_dba_GoodGirlRX_02_20_2026.txt  00019_Refills_Health__LLC_dba_Refills_Health_02_20_2026.txt  00020_PharmaZee_02_20_2026.txt  00021_Weightless_Medical_LLC_dba_WeightCare_02_20_2026.txt  00022_Ivim_Services_LLC_dba_Ivim_02_20_2026.txt  00025_Join_Josie_02_20_2026.txt  (+76 more)
