[project]
name = "fda-regulations"
version = "0.1.0"
description = "FDA Warning Letters QA dependencies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.6.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]